--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-pjt-springMVC-1/.springBeans
-pjt-springMVC-1/.classpath
-pjt-springMVC-1/.project
-pjt-springMVC-1/.settings/
+/**/.springBeans
+/**/.classpath
+/**/.project
+/**/.settings/
